Add options for initializing Blob Container and Key

--- a/AzureStorage1.API/appsettings.Development.json
+++ b/AzureStorage1.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AzureOptions": {
+    "ConnectionKey": "123",
+    "Container":  "ABC"
   }
 }
