--- a/AzureBlobStorage/AzureBlobStorage.csproj
+++ b/AzureBlobStorage/AzureBlobStorage.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.18.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
   </ItemGroup>
 
 </Project>
