--- a/AzureStorage1.API/AzureStorage1.API.csproj
+++ b/AzureStorage1.API/AzureStorage1.API.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AzureBlobStorage\AzureBlobStorage.csproj" />
+  </ItemGroup>
+
 </Project>
